--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/content": "^2.8.5",
     "@nuxt/devtools": "latest",
+    "@nuxthq/studio": "^1.0.0",
     "@unocss/nuxt": "^0.56.5",
     "@vueuse/nuxt": "^10.5.0",
     "nuxt": "^3.7.4",
