--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nuxt/content": "^2.8.5",
     "@nuxt/devtools": "latest",
     "@nuxthq/studio": "^1.0.0",
+    "@pinia/nuxt": "^0.4.11",
     "@unocss/nuxt": "^0.56.5",
     "@vueuse/nuxt": "^10.5.0",
+    "@vueuse/math": "^10.5.0",
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
