--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "1.0.0-beta.26",
     "@nuxt/content": "^2.8.5",
     "@nuxt/devtools": "latest",
     "@nuxthq/studio": "^1.0.0",
     "@pinia/nuxt": "^0.4.11",
     "@unocss/nuxt": "^0.56.5",
-    "@vueuse/nuxt": "^10.5.0",
     "@vueuse/math": "^10.5.0",
+    "@vueuse/nuxt": "^10.5.0",
+    "eslint": "^8.51.0",
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
